Correction du problème d'overflow des Mods lors du chargement de la page 'Mods'

--- a/public/assets/css/mods.css
+++ b/public/assets/css/mods.css
@@ -52,10 +52,6 @@
 
 /* GENERAL STYLES */
 
-body {
-    overflow-x: hidden;
-}
-
 h2 {
     font-family: Oswald, Inter, sans-serif;
     font-size: clamp(30px,5vw,44px);
@@ -157,6 +153,8 @@ section {
 /* RIGHT SIDEBAR (namespace: .mods) */
 
 .mods {
+    overflow-x: hidden;
+
     flex-grow: 1000;
     flex-shrink: 1;
     flex-basis: 800px;
